prevented border-image on IE10 via Modernizr

--- a/css/screen.css
+++ b/css/screen.css
@@ -628,14 +628,14 @@ html {
   display: block;
   width: 100%; }
 
-.shadow-effect {
+.borderimage .shadow-effect {
   border-style: solid;
   border-width: 0px 0px 10px;
+  margin-bottom: -10px;
   -webkit-border-image: url(../img/chrome/ellipse-shadow.png) 0 0 40 stretch;
        -o-border-image: url(../img/chrome/ellipse-shadow.png) 0 0 40 stretch;
-          border-image: url(../img/chrome/ellipse-shadow.png) 0 0 40 stretch;
-  margin-bottom: -10px; }
-  .shadow-effect.double-shadow {
+          border-image: url(../img/chrome/ellipse-shadow.png) 0 0 40 stretch; }
+  .borderimage .shadow-effect.double-shadow {
     -webkit-border-image: url(../img/chrome/ellipse-shadow-2.png) 0 0 40 stretch;
          -o-border-image: url(../img/chrome/ellipse-shadow-2.png) 0 0 40 stretch;
             border-image: url(../img/chrome/ellipse-shadow-2.png) 0 0 40 stretch; }
